[package]
name = "a-range"
version = "0.1.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
description = "Write quick and explict ranges in Rust"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/killercup/a-range"

[dependencies]
num-traits = "0.2.6"

[features]
nightly = []

[badges]
travis-ci = { repository = "killercup/a-range" }

[package.metadata.docs.rs]
features = ["nightly"]
no-default-features = true
